feat: implement getBankCategoryFromIBAN

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@ EL SOFTWARE SE PROPORCIONA "COMO ESTÁ", SIN GARANTÍA DE NINGÚN TIPO, EXPRESA 
             '<p class="text-success">Formato válido*</p>' + 
             '<p><strong>Entidad Bancaria:</strong> ' + bankObject.entity + '</p>' +
             '<p><strong>Código de entidad bancaria:</strong> ' + bankObject.code + '</p>' +
+            '<p><strong>Categoría de entidad bancaria:</strong> ' + bankObject.category + '</p>' +
             '<p class="text-muted font-italic">*Aunque el formato sea válido, esto no garantiza que sea un número de cuenta real.</p>'
           );
         } catch(e) {
