--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <p>
         Esta página es parte del proyecto de código abierto (open source) <a target="_blank" rel="noopener noreferrer" href="https://www.npmjs.com/package/costa-rica-iban">costa-rica-iban</a>, 
         el cual consiste en una <a target="_blank" rel="noopener noreferrer" href="https://es.khanacademy.org/computing/computer-programming/html-css-js/using-js-libraries-in-your-webpage/a/whats-a-js-library">librería de Javascript</a>,
-        compatible con <a target="_blank" rel="noopener noreferrer" href="https://nodejs.org/es/">Node.js</a> y navegadores,
+        compatible con <a target="_blank" rel="noopener noreferrer" href="https://es.wikipedia.org/wiki/TypeScript">Typescript</a>, <a target="_blank" rel="noopener noreferrer" href="https://nodejs.org/es/">Node.js</a>, y navegadores,
         que permite validar cuentas <a target="_blank" rel="noopener noreferrer" href="https://www.bgeneral.fi.cr/conozca-el-iban/">IBAN de Costa Rica</a> al igual que extraer datos guardados
         en el formato de las mismas (tales como código de banco, banco emisor, etc).</p>
       <hr/>
